testdata/parser/negative/24.txt
Parse error at 24.pdl:8:9: Unassignable expression
	x *= x * x *= 5;
	       ^
